# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: check_binary_files.py  check_binary_files.sh  dos2unix.py  terraform_fmt.py  terraform_validate.py
