[metadata]
name = pre_commit_hooks
version = 0.1.0
description = Pre-commit hooks for checking binary files
author = Song Tang
author_email = deamen@gmail.com
url = https://github.com/deamen/pre-commit-hooks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    # List your dependencies here

[options.entry_points]
console_scripts =
    check-binary-files = hooks.check_binary_files:main
    another-hook = hooks.another_hook:main
    yet-another-hook = hooks.yet_another_hook:main
