[metadata]
name = pre_commit_hooks
version = 0.2.0
description = Pre-commit hooks for checking binary files
author = Song Tang
author_email = deamen@gmail.com
url = https://github.com/deamen/pre-commit-hooks
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    # List your dependencies here

[options.entry_points]
console_scripts =
    check-binary-files = pre_commit_hooks.check_binary_files:main
    dos2unix = pre_commit_hooks.dos2unix:main
    terraform_fmt = pre_commit_hooks.terraform_fmt:main
    terraform_validate = pre_commit_hooks.terraform_validate:main
